fixed size of mainPhoto on small screens

--- a/src/components/MainPage/style.scss
+++ b/src/components/MainPage/style.scss
@@ -8,7 +8,8 @@
   background-color: $background-color;
 
   img {
-    height: 100%;
+    max-height: 100%;
+    max-width: 100vw;
   }
 }
 
@@ -78,3 +79,11 @@
   grid-row: 2;
   background-color: transparent;
 }
+
+// @media (max-width: 800px) {
+//   .mainPhoto {
+//     img {
+//       max-height: 300px;
+//     }
+//   }
+// }
